<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/mainTv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/mainViewBg"
        android:textSize="35sp"
        android:gravity="end|bottom"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        android:paddingBottom="10dp"
        android:text="@string/default_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn7"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7" />

        <Button
            android:id="@+id/btn8"
            android:layout_margin="2dp"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8" />
        <Button
            android:id="@+id/btn9"
            android:layout_margin="2dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9" />
        <Button
            android:id="@+id/multiplicationBtn"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/multiplicationBtn" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn4"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/_4" />

        <Button
            android:id="@+id/btn5"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/_5" />
        <Button
            android:id="@+id/btn6"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6" />
        <Button
            android:id="@+id/subtractionBtn"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subtractionSign" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn1"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1" />

        <Button
            android:id="@+id/btn2"
            android:layout_margin="2dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2" />
        <Button
            android:id="@+id/btn3"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3" />
        <Button
            android:id="@+id/additionBtn"
            android:layout_margin="2dp"
            android:textSize="20sp"
            android:onClick="onOperator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/additionSign" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn0"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0" />

        <Button
            android:id="@+id/dotBtn"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDecimal"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"/>
        <Button
            android:id="@+id/clearBtn"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onClear"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clearBtn" />
        <Button
            android:id="@+id/calcBtn"
            android:layout_margin="2dp"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:onClick="onEqual"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text= "@string/calcBtn" />
    </LinearLayout>
</LinearLayout>